<resources>
    <string name="app_name">NaturalLight</string>
<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <string name="nav_header_title">Natural Light</string>
    <string name="nav_header_subtitle">Blackhole of Photography</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_map">Map</string>
    <string name="menu_details">Detail</string>
    <string name="menu_locations">Locations</string>
    <string name="title_show_advanced_options">Show Advanced Options</string>
    <string name="title_edit_location">Edit Location</string>

    <string name="tick_mark_summary">Interval of the tick marks</string>

    <string name="tick_mark_degrees_summary">Interval of the tick degree labels</string>
    <string name="tick_mark_degrees_title">Tick Mark Degree Spacing</string>
    <string name="tick_mark_title">Tick Mark Spacing</string>
    <string name="header_settings">Settings</string>
    <string name="header_about">About</string>
    <string name="location_title">Location Title</string>
    <string name="location_list">Location list</string>
    <string name="title_of_the_location">Title of the location</string>
    <string name="use_current_time">Use current time</string>
    <string name="delete_message">Delete location?</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>

    <string name="sun_azimuth">Sun Azimuth</string>
    <string name="sun_elevation">Sun Elevation</string>
    <string name="sun_set">Sun Set</string>
    <string name="sun_rise">Sun Rise</string>
    <string name="moon_set">Moon Set</string>
    <string name="moon_rise">Moon Rise</string>

    <string name="latitude_of_location">Latitude of location</string>
    <string name="longitude_of_location">Longitude of location</string>
    <string name="hint_zoom_level">Zoom Level</string>
    <string name="delete_location">Delete location</string>
    <string name="add_marker">Add marker</string>
    <string name="delete">Delete</string>
    <string name="spacer_button">Spacer</string>
    <string name="date_time_selector">Date/time selector</string>
    <string name="regions_summary">Determine which time zones are loaded</string>
    <string name="regions_title">Region</string>
    <string name="title_select_date_time">Select Date/Time</string>
    <string name="moon_elevation">Moon Elevation</string>
    <string name="moon_azimuth">Moon Azimuth</string>
    <string name="appTitle">Natural Light</string>
    <string name="version">Version %d</string>
    <string name="appDescription">A tool for outdoor photographers</string>
    <string name="appCopyRight">© 2024–2025 Kevin Nickerson</string>
    <string name="source_code">Source code and issue reporting</string>
    <string name="app_source_url">https://github.com/PhotoKevin/Natural-Light</string>
    <string name="about_libraries">Third-Party Libraries</string>
    <string name="action_import_export">Export/Import</string>
    <string name="header_import_export">Import/Export</string>
    <string name="export_locations">Export Locations</string>
    <string name="import_locations">Import Locations</string>
    <string name="invalid_import">Invalid import file</string>
    <string name="jump_to_current_location">Jump to current location</string>
    <string name="zoom_level">Zoom level</string>
    <string name="compass">Compass</string>
</resources>