<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="100"
android:textAlignment="center"
android:weightSum="100">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.AboutFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_launcher"
                tools:src="@mipmap/ic_launcher" />



            <com.google.android.material.textview.MaterialTextView
                style="@style/ExLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appTitle" />

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appDescription" />


            <TextView
                style="@android:style/TextAppearance.DeviceDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appCopyRight" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_info"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        style="@android:style/TextAppearance.DeviceDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.DeviceDefault"
                        tools:text="1.2.3"
                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_info"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source_code"
                        style="@android:style/TextAppearance.DeviceDefault"

                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/githubLink"
                        style="@android:style/TextAppearance.DeviceDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_source_url" />
                </LinearLayout>
            </LinearLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/about_libraries"
                style="@android:style/TextAppearance.DeviceDefault"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/librariesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
